[package]
name = "hive-asar"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
sha2 = "0.9.8"
tokio = { version = "1.13.0", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1.13.0", features = ["fs", "macros", "rt"] }
